--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -23,18 +23,25 @@ swiper-item image{
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin:10rpx 0rpx;
+  
 }
 .navIcon image{
   width: 88rpx;
   height: 88rpx;  
+  margin:20rpx 0rpx;
 }
+.navIcon .small{
+  width: 44rpx;
+  height:44rpx;
+}
+
 .navIcon text{
   font-size: 26rpx;
 }
 .banner {
   width: 100%;
   height: 100%;
+  margin:20rpx 0rpx;
 }
 .banner image{
    width: 100%;
