--- a/componets/goodsCard/goodsCard.wxml
+++ b/componets/goodsCard/goodsCard.wxml
@@ -2,19 +2,19 @@
 
 <navigator url=""class="goodsCard" >
   <view class="goods-image">
-      <image src="/static/images/1.png" mode=""/>
+      <image src="{{goodsInfo.imageUrl}}" mode=""/>
   </view>
   <view class="goods-content"> 
       <view class="goods-title">
-           爱的诺言爱的诺言爱的诺言爱
+           {{goodsInfo.name}}
       </view>
       <view class="goods-dec">
-    岁数大但是v范德萨VS的v范德萨VS的
+    {{goodsInfo.floralLanguage}}
       </view>
       <view class="goods-bar">
          <view class="goods-price">
-              <text class="current-price">￥ 2639</text>
-              <text class="origin-price">￥ 2939</text>
+              <text class="current-price">￥ {{goodsInfo.price}}</text>
+              <text class="origin-price">￥ {{goodsInfo.marketPrice}}</text>
          </view>
          <view class="goods-cate">
              <image src="https://img02.hua.com/m/home/img/home_buy_btn.png" mode=""/>
