--- a/componets/goodsCard/goodsCard.wxss
+++ b/componets/goodsCard/goodsCard.wxss
@@ -24,10 +24,19 @@
 .goods-title{
   font-weight: bold;
   font-size: 28rpx;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .goods-dec{
   font-size: 26rpx;
   color: #999;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2; /* 显示两行文本 */
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .goods-price{
