Complete popularity recommendation

--- a/componets/goodsList/goodsList.wxml
+++ b/componets/goodsList/goodsList.wxml
@@ -3,7 +3,8 @@
         {{title}}
      </view>  
      <view class="goodsCard">
-      <goodsCard wx:for="{{goodsList}}" wx:key="id" goodsInfo="{{item}}"  goodsInfo="{{item}}"></goodsCard>
+      <goodsCard wx:for="{{goodsList}}" wx:key="id"   goodsInfo="{{item}}"></goodsCard>
+     
      </view>
       
        <view class="more">
