--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -1,2 +1,53 @@
-<!--pages/cart/cart.wxml-->
-<text>pages/cart/cart.wxml</text>
+<!-- cart 购物车 -->
+<view class="container cart_list_container">
+  <!-- 购物车列表 -->
+  <view class="cart_list" wx:if="{{cartList.length}}">
+    <view class="cart_item flex" wx:for="{{cartList}}" wx:key="goodsId">
+      <!-- 左侧选项卡 -->
+      <view class="check">
+        <van-checkbox checked-color="#FA4126" value="{{item.isChecked}}" bindchange='handleChangeChecked' data-goodsid='{{item.goodsId}}'></van-checkbox>
+      </view>
+      <!-- 中间商品图 -->
+      <view class="shop_img">
+        <image class="img" src="{{item.imageUrl}}"></image>
+      </view>
+
+      <!-- 右侧商品信息 -->
+      <view class="shop_info flex">
+        <view class="title">{{item.name}}</view>
+        <view class="blessing" wx:if="{{item.blessing}}">
+          <view class="blessing_info">留言: {{item.blessing}}</view>
+        </view>
+        <view class="buy flex">
+          <view class="price">￥ {{item.price}}</view>
+          <view class="buy_btn flex">
+            <van-icon size="18px" color="#71797f" name="delete" class="del" bindtap='handleDelete' data-goodsid='{{item.goodsId}}' data-name='{{item.name}}'/>
+            <van-stepper value="{{item.count}}" bindchange='handleChangeCount' data-goodsid='{{item.goodsId}}' data-oldcount='{{item.count}}'/>
+          </view>
+        </view>
+      </view>
+    </view>
+  </view>
+  <!-- 空的购物车 -->
+  <van-empty wx:else description="还没有添加商品，快去添加吧～" />
+  <!-- 底部结算 -->
+  <view class="submit_footer flex">
+    <view class="check">
+       <van-checkbox checked-color="#FA4126" value="{{isAllChecked}}" bindchange='handleChangeAllChecked'>
+        全选
+      </van-checkbox>
+    </view>
+
+    <view class="right flex">
+      <view class="total-wrapper">
+        <text>合计：</text>
+        <text class="total-price">¥ {{totalPrice}}</text>
+      </view>
+      <view class="total-count">
+        <van-button size="small" color="linear-gradient(to right, rgb(255, 96, 52), rgb(238, 10, 36))" round disabled='{{isDis}}' bindtap='handleToOrder'>
+          去结算{{cartList.length}}
+        </van-button>
+      </view>
+    </view>
+  </view>
+</view>
