--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -1,2 +1,41 @@
-<!--pages/profile/profile.wxml-->
-<text>pages/profile/profile.wxml</text>
+<view class="container">
+
+<view class="setting-list avatar-container">
+  <text>头像</text>
+
+  <view class="avatar">
+    <button hover-class="none"  open-type="chooseAvatar" bindchooseavatar="onGetAvatar">
+      <image src="{{ userInfo.headimgurl }}" mode="" />
+    </button>
+  </view>
+</view>
+
+<view class="setting-list nickname" bindtap="onUpdateNickName">
+  <text>昵称</text>
+  <text>{{ userInfo.nickname }}</text>
+</view>
+
+<view class="footer">
+  <view class="btn" bindtap="onUpdateUserInfo">保存</view>
+</view>
+
+<van-dialog
+ custom-style="position: relative"
+ use-slot
+ title="修改昵称"
+ show="{{ isShowDialog }}"
+ showConfirmButton="{{ false }}"
+ showCancelButton="{{ false }}"
+ transition="fade"
+>
+  <form bindsubmit="getNickName">
+    <!-- type 设置为 nickname 是为了获取微信昵称 -->
+    <input type="nickname" class="input-name" name="nickname" value="{{ userInfo.nickname }}" />
+    <view class="dialog-content">
+      <button class="cancel" bindtap="cancelForm">取消</button>
+      <!-- 将 formType 设置为 submit 当用户点击确定后，触发 form 表单的 bindsubmit 事件 -->
+      <button class="confirm" type="primary" formType="submit">确定</button>
+    </view>
+  </form>
+</van-dialog>
+</view>
